# serde_rustler

serde_rustler/: Cargo.toml
serde_rustler/src/: error.rs  ser.rs
serde_rustler_tests/: mix.exs
serde_rustler_tests/native/serde_rustler_tests/: Cargo.toml
