[package]
name = "serde_rustler"
description = "Serde Serializer and Deserializer for Rustler NIFs"
version = "0.1.0"
authors = ["Sunny G <sunny.gonna@gmail.com>"]
repository = "https://github.com/sunny-g/serde_rustler"
categories = ["encoding", "external-ffi-bindings", "serde", "rustler", "elixir"]
readme = "README.md"
license = "MIT"
edition = "2018"

[lib]
name = "serde_rustler"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
lazy_static = "1.4.0"
thiserror = "1.0"
rustler = {version = "0.29.0", features = ["nif_version_2_16"]}
rustler_codegen = "0.29.0"
# serde = "1.0"
serde = { version = "1.0.137" }
